# ki

./: .dir-locals.el  .gitignore  Cargo.toml  Makefile  README.md  TODO.md  docker-compose.yml  dot.env
arysn_cli/: Cargo.toml
arysn_cli/src/: main.rs
client/: .gitignore  Cargo.toml  package.json  webpack.config.js
client/css/: _base.scss  _dialog.scss  _form.scss  _form.std.scss  _loading.scss  _pager.scss  _post.scss  _posts.scss  _toast.scss  _week.scss  main.scss
client/src/: app.rs  common.rs  component.rs  fetch.rs  global_state.rs  index.html  index.js  lib.rs  markdown.rs  prism.rs  routes.rs  utils.rs
client/src/common/: dto.rs  form.rs  models.rs  types.rs  validate.rs
client/src/component/: admin.rs  dialog.rs  error.rs  foo.rs  index.rs  loading.rs  login.rs  pager.rs
client/src/component/admin/: bar.rs  header.rs  index.rs  posts.rs
client/src/component/admin/posts/: edit.rs  form.rs  new.rs
client/src/component/posts/: index.rs  show.rs
common/: Cargo.toml
common/src/: dto.rs  form.rs  lib.rs  schema.rs  types.rs
docker/client/: Dockerfile
docker/db/: Dockerfile
docker/host/: nginx-site.conf
docker/server/: Dockerfile
migrations/2020-07-24-085418_create_users/: up.sql
migrations/2020-07-24-085421_create_posts/: down.sql  up.sql
production/: docker-compose.yml
production/host/: nginx-site.conf
production/server/: Dockerfile
production/server/app/: .gitignore  start.sh
production/web/: Dockerfile  mime.types  site.conf
server/: Cargo.toml  build.rs  diesel.toml
server/migrations/2020-04-03-004351_create_users/: down.sql  up.sql
server/migrations/2020-04-16-112503_create_posts/: up.sql
server/src/: api.rs  auth.rs  common.rs  errors.rs  generated.rs  lib.rs  main.rs  middleware.rs  paginate.rs  schema.rs  thread_data.rs  utils.rs
server/src/api/: posts.rs
server/src/api/admin/: posts.rs
