[package]
name = "arysn_cli"
version = "0.1.0"
authors = ["Tahara Yoshinori <read.eval.print@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
arysn = { git = "https://github.com/quek/arysn", branch = "main" }
quote = "1"
