[package]
name = "arysn_cli"
version = "0.1.0"
authors = ["Tahara Yoshinori <read.eval.print@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
arysn = { path = "../../arysn/arysn" }
env_logger = "0.7"
log = "0.4"
quote = "1"
