[package]
name = "client"
version = "0.1.0"
authors = ["Tahara Yoshinori <read.eval.print@gmail.com>"]
edition = "2018"
description = "記 client"
repository = "https://github.com/quek/ki"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde", "wasmbind"] }
js-sys = "*"
pulldown-cmark = "0.7"
serde = { version = "1", features = ["derive", "rc"] }
serde_qs = "0.5"
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
yew = { version = "0.15" }
yew-router = { version = "0.12" }

[dependencies.web-sys]
version = "0.3"
features = [
  "Document",
  "DomRect",
  "DomStringMap",
  "Element",
  "FormData",
  "HtmlFormElement",
  "NodeList",
  "ScrollBehavior",
  "ScrollToOptions",
  "Window",
  "console"
]

[profile.release]
opt-level = "z"
