[package]
name = "common"
version = "0.1.0"
authors = ["Tahara Yoshinori <read.eval.print@gmail.com>"]
edition = "2018"
description = "記 client と server の共通部分"
repository = "https://github.com/quek/ki"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde = "1"

[target.'cfg(target_arch = "x86_64")'.dependencies]
actix-identity = "0.2"
actix-web = "2"
actix-http = "1"
diesel = { version = "1.4", features = ["postgres", "r2d2", "chrono", "64-column-tables"] }
diesel-derive-enum = { version = "0.4", features = ["postgres"] }
futures = "0.3"
serde_json = "1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = "0.3"
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }

[target.'cfg(target_arch = "wasm32")'.dependencies.web-sys]
version = "0.3"
features = [
  "FormData",
  "HtmlFormElement"
]
