[package]
name = "server"
version = "0.1.0"
authors = ["Tahara Yoshinori <read.eval.print@gmail.com>"]
edition = "2018"
description = "記 server"
repository = "https://github.com/quek/ki"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-http = "1"
actix-identity = "0.2"
actix-rt = "1"
actix-service = "1"
actix-web = { version = "2", features = ["rustls"] }
chrono = { version = "0.4", features = ["serde"] }
derive_more = "0.15"
diesel = { version = "1.4", features = ["postgres", "r2d2", "chrono", "64-column-tables"] }
diesel-derive-enum = { version = "0.4", features = ["postgres"] }
env_logger = "0.7"
futures = "0.3"
lazy_static = "1"
listenfd = "0.3"                # autoreload
log = "0.4"
r2d2 = "0.8"
serde = "1"
serde_json = "1"
url = "2"
