[package]
name = "server"
version = "0.1.0"
authors = ["Tahara Yoshinori <read.eval.print@gmail.com>"]
edition = "2018"
description = "記 server"
repository = "https://github.com/quek/ki"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-http = "1"
actix-identity = "0.2"
actix-rt = "1"
actix-service = "1"
actix-web = { version = "2", features = ["rustls"] }
chrono = { version = "0.4", features = ["serde"] }
config = "0.10"
derive_more = "0.15"
env_logger = "0.7"
futures = "0.3"
lazy_static = "1"
listenfd = "0.3"                # autoreload
log = "0.4"
quote = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2"

arysn = { path = "../../arysn/arysn" }
anyhow = "1"
async-recursion = "0.3"
tokio-postgres = { version = "0.5", features = ["with-chrono-0_4"] }
postgres-types = { version = "0.1", features = ["derive"] }
deadpool-postgres = "0.5"
